add env variable EXCLUSION_REPORTS_API_ENABLED for backend

--- a/openshift/pipelines/Jenkinsfile
+++ b/openshift/pipelines/Jenkinsfile
@@ -1,6 +1,6 @@
 result = 0
 runParallel = true
-tfrsRelease="v1.4.20"
+tfrsRelease="v1.4.21"
 
 podTemplate(label: "master-backend-python-${env.BUILD_NUMBER}", name: "master-backend-python-${env.BUILD_NUMBER}", serviceAccount: 'jenkins-basic', cloud: 'openshift',
     containers: [
@@ -100,7 +100,7 @@ podTemplate(label: "master-maven-${env.BUILD_NUMBER}", name: "master-maven-${env
 
         //apply deployment configs
         //if there is an new environment variable added to the invoked template, the stage needs to be applied.
-        //prepareDCStages.backendDCStage("test").call()
+        prepareDCStages.backendDCStage("test").call()
         //prepareDCStages.celeryDCStage("test").call()
         //prepareDCStages.scanCoordinatorDCStage("test").call()
         //prepareDCStages.scanHandlerDCStage("test").call()
@@ -138,7 +138,7 @@ podTemplate(label: "master-maven-${env.BUILD_NUMBER}", name: "master-maven-${env
 
         //apply deployment configs
         //if there is an new environment variable added to the invoked template, the stage needs to be applied.
-        //prepareDCStages.backendDCStage("prod").call()
+        prepareDCStages.backendDCStage("prod").call()
         //prepareDCStages.celeryDCStage("prod").call()
         //prepareDCStages.scanCoordinatorDCStage("prod").call()
         //prepareDCStages.scanHandlerDCStage("prod").call()
