--- a/nagios/nagios3/conf.d/check_diskusage.cfg
+++ b/nagios/nagios3/conf.d/check_diskusage.cfg
@@ -1,18 +1,18 @@
-# define service {
-#         service_description             check disk usage
-#      	check_command                     check_diskusage!mem-tfrs-dev
-#         use                             generic-service
-#         host_name   dev
-#     	notification_interval           0
-# }
+define service {
+        service_description             check disk usage
+     	check_command                   check_diskusage!mem-tfrs-dev
+        use                             generic-service
+        host_name                       dev
+    	notification_interval           0
+}
 
-# define service {
-#         service_description             check disk usage
-#         check_command                   check_diskusage!mem-tfrs-test
-#         use                             generic-service
-#         host_name   test
-#         notification_interval           0
-# }
+define service {
+        service_description             check disk usage
+        check_command                   check_diskusage!mem-tfrs-test
+        use                             generic-service
+        host_name                       test
+        notification_interval           0
+}
 
 define service {
         service_description             check disk usage
