--- a/nagios/nagios3/conf.d/https.cfg
+++ b/nagios/nagios3/conf.d/https.cfg
@@ -1,9 +1,26 @@
 define service {
    #hostgroup_name                  openshift-services
-   host_name                       prod
+   host_name                       dev
    service_description             HTTP
    check_command                   check_https
    use                             generic-service
    notification_interval           0
 }
 
+define service {
+   #hostgroup_name                  openshift-services
+   host_name                       test
+   service_description             HTTP
+   check_command                   check_https
+   use                             generic-service
+   notification_interval           0
+}
+
+define service {
+   #hostgroup_name                  openshift-services
+   host_name                       prod
+   service_description             HTTP
+   check_command                   check_https
+   use                             generic-service
+   notification_interval           0
+}
