--- a/nagios/nagios3/conf.d/replicas-client.cfg
+++ b/nagios/nagios3/conf.d/replicas-client.cfg
@@ -1,22 +1,22 @@
-# define service {
-#         service_description             client replica count
-#      	check_command                   check_replicas!mem-tfrs-dev!client!1
-#         use                             generic-service
-#         host_name   dev
-#     	notification_interval           0
-# }
-
-# define service {
-#         service_description             client replica count
-#         check_command                   check_replicas!mem-tfrs-test!client!1
-#         use                             generic-service
-#         host_name   test
-#         notification_interval           0
-# }
+define service {
+        service_description             client replica count
+     	check_command                   check_replicas!mem-tfrs-dev!client!1
+        use                             generic-service
+        host_name                       dev
+    	notification_interval           0
+}
 
 define service {
         service_description             client replica count
-        check_command                   check_replicas!mem-tfrs-prod!client!1
+        check_command                   check_replicas!mem-tfrs-test!client!2
+        use                             generic-service
+        host_name                       test
+        notification_interval           0
+}
+
+define service {
+        service_description             client replica count
+        check_command                   check_replicas!mem-tfrs-prod!client!2
         use                             generic-service
         host_name                       prod
         notification_interval           0
