--- a/nagios/nagios3/conf.d/hostgroups.cfg
+++ b/nagios/nagios3/conf.d/hostgroups.cfg
@@ -2,13 +2,11 @@
 # define hostgroup {
 #        hostgroup_name  all
 #		alias           All Servers
-#		members         *
+#		members         dev,test,prod
 #        }
 
 define hostgroup {
-        hostgroup_name  openshift-host
-		alias           Openshift hosts
-		members         prod
-        }
-
-
+    hostgroup_name  TFRS-Openshift-Hosts
+    alias           TFRS Openshift Hosts
+    members         dev,test,prod
+}
