--- a/nagios/nagios3/conf.d/replicas-notification-server.cfg
+++ b/nagios/nagios3/conf.d/replicas-notification-server.cfg
@@ -1,18 +1,18 @@
-# define service {
-#         service_description             notification service replica count
-#      	check_command                   check_replicas!mem-tfrs-dev!notification-server!1
-#         use                             generic-service
-#         host_name   dev
-#     	notification_interval           0
-# }
+define service {
+        service_description             notification service replica count
+     	check_command                   check_replicas!mem-tfrs-dev!notification-server!1
+        use                             generic-service
+        host_name                       dev
+    	notification_interval           0
+}
 
-# define service {
-#         service_description             notification service replica count
-#         check_command                   check_replicas!mem-tfrs-test!notification-server!1
-#         use                             generic-service
-#         host_name   test
-#         notification_interval           0
-# }
+define service {
+        service_description             notification service replica count
+        check_command                   check_replicas!mem-tfrs-test!notification-server!1
+        use                             generic-service
+        host_name                       test
+        notification_interval           0
+}
 
 define service {
         service_description             notification service replica count
