--- a/nagios/nagios3/conf.d/replicas-tfrs.cfg
+++ b/nagios/nagios3/conf.d/replicas-tfrs.cfg
@@ -1,22 +1,22 @@
-# define service {
-#         service_description             backend replica count
-#     	check_command                   check_replicas!mem-tfrs-dev!tfrs!1
-#         use                             generic-service
-#         host_name   dev
-#     	notification_interval           0
-# }
-
-# define service {
-#         service_description             backend replica count
-#         check_command                   check_replicas!mem-tfrs-test!tfrs!1
-#         use                             generic-service
-#         host_name   test
-#         notification_interval           0
-# }
+define service {
+        service_description             backend replica count
+    	check_command                   check_replicas!mem-tfrs-dev!tfrs!1
+        use                             generic-service
+        host_name                       dev
+    	notification_interval           0
+}
 
 define service {
         service_description             backend replica count
-        check_command                   check_replicas!mem-tfrs-prod!tfrs!1
+        check_command                   check_replicas!mem-tfrs-test!tfrs!2
+        use                             generic-service
+        host_name                       test
+        notification_interval           0
+}
+
+define service {
+        service_description             backend replica count
+        check_command                   check_replicas!mem-tfrs-prod!tfrs!2
         use                             generic-service
         host_name                       prod
         notification_interval           0
