--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-hot-loader": "^4.8.4",
     "react-input-mask": "^1.2.2",
     "react-intl": "^2.7.2",
+    "react-json-view": "^1.19.1",
     "react-markdown": "^4.1.0",
     "react-redux": "^5.1.1",
     "react-redux-toastr": "^7.4.5",
