--- a/nagios/nagios3/commands.cfg
+++ b/nagios/nagios3/commands.cfg
@@ -59,3 +59,32 @@ define command {
     command_line    /etc/nagios3/commands/check_diskusage.sh '$ARG1$'
 }
 
+define command {
+    command_name    check_postgresql_liveness
+    command_line    /etc/nagios3/commands/check_postgresql_liveness.sh '$ARG1$'
+}
+
+define command {
+    command_name    check_host
+    command_line    /etc/nagios3/commands/check_host.sh
+}
+
+define command {
+    command_name   check_rabbitmq_connection
+    command_line    /etc/nagios3/commands/check_rabbitmq_connection.sh
+}
+
+define command {
+    command_name   check_minio_connection
+    command_line    /etc/nagios3/commands/check_minio_connection.sh
+}
+
+define command {
+    command_name   check_keycloak_connection
+    command_line    /etc/nagios3/commands/check_keycloak_connection.sh
+}
+
+define command {
+    command_name   check_email_connection
+    command_line    /etc/nagios3/commands/check_email_connection.sh
+}
