--- a/nagios/nagios3/nagios.cfg
+++ b/nagios/nagios3/nagios.cfg
@@ -1,7 +1,9 @@
-log_file=/dev/fd/1
+log_file=/var/log/nagios3/nagios3.log
 cfg_file=/etc/nagios3/commands.cfg
 cfg_dir=/etc/nagios-plugins/config
 cfg_dir=/etc/nagios3/conf.d
+log_rotation_method=d
+log_archive_path=/var/log/nagios3
 object_cache_file=/var/cache/nagios3/objects.cache
 precached_object_file=/var/lib/nagios3/objects.precache
 resource_file=/etc/nagios3/resource.cfg
@@ -93,7 +95,7 @@ date_format=iso8601
 p1_file=/usr/lib/nagios3/p1.pl
 enable_embedded_perl=1
 use_embedded_perl_implicitly=1
-use_timezone=PST
+use_timezone=Canada/Pacific
 illegal_object_name_chars=`~!$%^&*|'"<>?,()=
 illegal_macro_output_chars=`~$&|'"<>
 use_regexp_matching=0
@@ -103,7 +105,7 @@ admin_pager=pageroot@localhost
 daemon_dumps_core=0
 use_large_installation_tweaks=0
 enable_environment_macros=1
-debug_level=256
+debug_level=0
 debug_verbosity=1
-debug_file=/dev/fd/1
-max_debug_file_size=1000000
+debug_file=/var/log/nagios3/nagios3-debug.log
+max_debug_file_size=10000000
