--- a/nagios/supervisord/supervisord.conf
+++ b/nagios/supervisord/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 logfile = /dev/fd/1
-loglevel = debug
+loglevel = info
 logfile_maxbytes = 0
 redirect_stderr=true
 nodaemon = true
@@ -8,13 +8,14 @@ pidfile=/var/run/supervisord/supervisord.pid
 
 [program:nagios]
 logfile = /dev/fd1
+loglevel = info
 logfile_maxbytes = 0
 redirect_stderr = true
 command = /usr/sbin/nagios3 /etc/nagios3/nagios.cfg
 
 [program:apache]
 logfile = /dev/fd/1
+loglevel = info
 logfile_maxbytes = 0
 redirect_stderr = true
 command = /usr/sbin/apachectl -DFOREGROUND
-
