--- a/nagios/nagios3/conf.d/contacts.cfg
+++ b/nagios/nagios3/conf.d/contacts.cfg
@@ -1,6 +1,6 @@
-define contact{
-	contact_name                    nagiosadmin
-	alias                           root
+define contact {
+	contact_name                    Kuan.Fan
+	alias                           TFRS DevOps Kuan
 	host_notifications_enabled		1
 	service_notifications_enabled	1
 	service_notification_period     24x7
@@ -9,6 +9,6 @@ define contact{
 	host_notification_options       d,u,r
 	service_notification_commands   notify-service-by-email
 	host_notification_commands      notify-host-by-email
-	email							kuan.fan@gov.bc.ca
+	email							Kuan.Fan@gov.bc.ca
 	can_submit_commands				1
-	}
+}
